# libmgec-deb-pkg

./: .clang-format  .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configurable-options.sh  configure.ac  libmgec2_1.6.6.orig.tar.gz.delta  libmgec2_1.6.6.orig.tar.gz.id  libmgec2_1.6.7.orig.tar.gz.delta  libmgec2_1.6.7.orig.tar.gz.id  libmgec2_1.6.8.orig.tar.gz.delta  libmgec2_1.6.8.orig.tar.gz.id  libmgec7_1.7.0.orig.tar.gz.delta  libmgec7_1.7.0.orig.tar.gz.id  libmgec7_1.7.1.orig.tar.gz.delta  libmgec7_1.7.1.orig.tar.gz.id  libmgec7_1.7.2.orig.tar.gz.delta  libmgec7_1.7.2.orig.tar.gz.id  libmgec7_1.7.3.orig.tar.gz.delta  libmgec7_1.7.3.orig.tar.gz.id  libmgec7_1.7.4.orig.tar.gz.delta  libmgec7_1.7.4.orig.tar.gz.id  libmgec7_1.8.0.orig.tar.gz.delta  libmgec7_1.8.0.orig.tar.gz.id  libmgec7_1.8.2~rc1.orig.tar.gz.delta  libmgec7_1.8.2~rc1.orig.tar.gz.id  libmgec7_1.8.2~rc2.orig.tar.gz.delta  libmgec7_1.8.2~rc2.orig.tar.gz.id  libmgec_1.6.4.orig.tar.gz.delta  libmgec_1.6.4.orig.tar.gz.id
debian/: watch  (+14 more)
dev/: ChangeLog  Makefile.am  NEWS  README  configure.ac
dev/source/man/man3/bstree/: find_next_bst_node_trace.3.man.in  get_counter_bst_node.3.man.in
dev/source/man/man3/buffer/: Makefile.am  print_buf.3.man.in
dev/source/man/man3/errno/: Makefile.am
dev/source/man/man3/message/: Makefile.am
dev/source/man/man3/sllist/: Makefile.am
dev/source/progs/c/inc/: Makefile.am  bstree.h  libmgec.h  portability.h
dev/source/progs/c/sysgen/inc/: Makefile.am
dev/src/man/3/bstree/: Makefile.am  cre_bst.3.man.in  del_bst.3.man.in  find_bst_node.3.man.in  find_next_bst_node.3.man.in  find_prev_bst_node.3.man.in  get_counter_bst_node.3.man.in
dev/src/man/3/buffer/: Makefile.am  concat_buf.3.man.in  trim_buf.3.man.in
dev/src/man/3/dllist/: Makefile.am  add_dll_node.3.man.in  find_next_dll_node.3.man.in  find_prev_dll_node.3.man.in  free_dllist.3.man.in
dev/src/man/3/errno/: Makefile.am  mge_strerror.3.man.in
dev/src/man/3/memory/: Makefile.am  mg_realloc.3.man.in
dev/src/man/3/message/: Makefile.am  clear_msg.3.man.in  deconstruct_msg.3.man.in  get_msg.3.man.in  pull_msg.3.man.in
dev/src/man/3/sllist/: Makefile.am  add_sll_node.3.man.in  find_next_sll_node.3.man.in  free_sllist.3.man.in
dev/src/prg/c/inc/: Makefile.am  bstree.h  mge-errno.h  mgebuffer.h  mgemessage.h  portability.h
dev/src/prg/c/src/: Makefile.am
docs/doxygen/: Doxyfile.in  Makefile.am  index.html  libmgec-int.in  libmgec.in
docs/doxygen/src/: 100-overview.md  150-autotools-internal.md  300-errors.md  500-memory.md
docs/doxygen/src/buf-msg/: 200-buf-msg.md  get-msg-flow.dia  pull-msg-flow-int.dia
lib/: ChangeLog  Makefile.am  NEWS  README  configure.ac
lib/m4extra/: BUILD_COMPILER_VERSION_CFLAGS.m4
lib/source/progs/c/src/libmgec/: Makefile.am  version.c
lib/source/progs/c/src/test-bstree/: Makefile.am  Test09Answer.txt.in
lib/source/progs/c/src/test-dllist/: Makefile.am  main.c
lib/source/progs/c/src/test-sllist/: Makefile.am
lib/source/progs/c/sysgen/inc/: Makefile.am
lib/src/prg/c/inc/: Makefile.am  mge-general.h
lib/src/prg/c/inc-tmp/: Makefile.am
lib/src/prg/c/lib-tmp/: Makefile.am
lib/src/prg/c/src/libmgec/: Makefile.am  version.c
lib/src/prg/c/src/test-bstree/: Makefile.am  Test03bAnswer.txt.in  Test05Answer.txt.in  Test08Answer.txt.in  main.c
lib/src/prg/c/src/test-buf-msg/: Makefile.am  main.c
lib/src/prg/c/src/test-dllist/: Makefile.am  main.c
lib/src/prg/c/src/test-errno/: Makefile.am
lib/src/prg/c/src/test-sllist/: Makefile.am  main.c
libmgec-dev/: Makefile.am  configure.ac
libmgec-dev/docs/: TODO.txt
libmgec-dev/source/man/man3/bstree/: Makefile.am  add_bst_node.3.man.in  find_next_bst_node.3.man.in  upd_bst_node.3.man.in
libmgec-dev/source/man/man3/buffer/: Makefile.am  concat_buf.3.man.in
libmgec-dev/source/man/man3/dllist/: Makefile.am  find_next_dll_node.3.man.in  find_prev_dll_node.3.man.in
libmgec-dev/source/man/man3/errno/: Makefile.am  mge_strerror.3.man.in
libmgec-dev/source/man/man3/memory/: Makefile.am
libmgec-dev/source/man/man3/message/: Makefile.am  get_msg.3.man.in
libmgec-dev/source/man/man3/sllist/: Makefile.am  free_sllist.3.man.in
libmgec-dev/source/progs/c/inc/: Makefile.am  bstree.h  dllist.h  libmgec.h  mge-errno.h  mgebuffer.h  mgememory.h  mgemessage.h  portability.h  sllist.h
libmgec-dev/source/progs/c/src/: Makefile.am
libmgec-dev/source/progs/c/sysgen/inc/: Makefile.am
libmgec-doc/: Makefile.am  configure.ac
libmgec-doc/docs/: TODO.txt
libmgec-doc/docs/doxygen/: Doxyfile.in  Makefile.am
libmgec-lib/: ChangeLog  Makefile.am  NEWS  configure.ac
libmgec-lib/docs/: TODO.txt
libmgec-lib/source/progs/c/inc-tmp/: Makefile.am
libmgec-lib/source/progs/c/lib-tmp/: Makefile.am
libmgec-lib/source/progs/c/src/libmgec/: Makefile.am  version.c
libmgec-lib/source/progs/c/src/test-bstree/: Makefile.am  Test00StartingBSTree.txt.in  Test07aAnswer.txt.in  main.c
libmgec-lib/source/progs/c/src/test-dllist/: Makefile.am
libmgec-lib/source/progs/c/src/test-errno/: Makefile.am
libmgec-lib/source/progs/c/src/test-sllist/: Makefile.am
libmgec-lib/source/progs/c/sysgen/inc/: Makefile.am
source/progs/c/src/test-dllist/: Makefile.am
src/man/3/bstree/: Makefile.am  del_bst.3.man.in  del_bst_node.3.man.in
src/man/3/buf-msg/: Makefile.am  clear_msg.3.man.in  concat_buf.3.man.in  print_buf.3.man.in  print_msg.3.man.in  pull_msg.3.man.in  trim_buf.3.man.in
src/man/3/errno/: Makefile.am  mge_strerror.3.man.in
src/man/3/memory/: Makefile.am  mg_realloc.3.man.in
src/prg/c/inc/: Makefile.am  bstree.h  dllist.h  libmgec.h  mge-bstree.h  mge-buffer.h  mge-errno.h  mge-general.h  mge-internal.h  mge-memory.h  mge-message.h  mge-portability.h  mgebuffer.h  mgememory.h  mgemessage.h  portability.h  sllist.h
src/prg/c/inc-tmp/: Makefile.am
src/prg/c/inc/libmgec/: Makefile.am  dllist.h  libmgec.h  mge-bstree.h  mge-buffer.h  mge-errno.h  mge-memory.h  mge-message.h  mge-portability.h  sllist.h
src/prg/c/lib-tmp/: Makefile.am
src/prg/c/pkg-config/: Makefile.am  libmgec.pc.in
(+215 files in other folders)
